--- a/CodeBreakers/app/src/main/res/values/strings.xml
+++ b/CodeBreakers/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="medium">Medium</string>
     <string name="hard">Hard</string>
     <string name="guess">Submit Guess</string>
+    <string name="remaining">Guesses Reaming</string>
 </resources>
