--- a/CodeBreakers/app/src/main/res/values/strings.xml
+++ b/CodeBreakers/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hard">Hard</string>
     <string name="guess">Submit Guess</string>
     <string name="remaining">Guesses Reaming</string>
+    <string name="make">Send Code</string>
 </resources>
