Added second Activity that will get players names

--- a/CuratorsScorepad/app/src/main/res/values/strings.xml
+++ b/CuratorsScorepad/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Curators Scorepad</string>
+    <string name="score_game">Score a new game</string>
+    <string name="view_history">View game history</string>
 </resources>
